# profitabledge

./: .gitignore  ADVANCED_METRICS_IMPLEMENTATION.md  ADVANCED_METRICS_QUICKSTART.md  AGENTS.md  AI_ENGINE_PRD.md  BETTER_MULTI_ACCOUNT_SOLUTIONS.md  CLAUDE.md  CODEBASE_CONTEXT.md  DRAWDOWN_DATA_RESEARCH.md  FULL_APP_IMPROVEMENT_PRD.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MT5_TERMINAL_FARM_DESIGN.md  MULTI_ACCOUNT_SETUP.md  NEON_DB_GUIDE.md  NEON_STUDIO_FIX.md  NOTIFICATION_SYSTEM_ANALYSIS.md  PRD-IMPROVEMENTS.md  README.md  READY_TO_DEPLOY.md  RESTART_DEV.md  bts.jsonc  check-index.js  monitor-webhooks.sh  mprocs.yaml  package.json  turbo.json
.githooks/: pre-push
.github/workflows/: ci.yml
.next/: trace
.tmp/: tradovate_csv_check.ts
EA/: MANIPULATION_TRACKING.md  ProfitabledgeSync.mq5  README.md  profitabledge_data_bridge.mq5
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: detached.json  main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  .gitignore  add-killzone-columns.ts  check-columns.ts  check-db-detailed.ts  check-db.ts  check-migrations.ts  check-open-trade.ts  db-status.ts  (+11 more)
docs/: README.md  developer-playbook.md  trading-firms-logo-audit.csv  trading-firms-master.csv  trading-firms-summary.json
scripts/: download-trading-logos.mjs  generate-trpc-contract.mjs  run-tsc-check.mjs  setup-git-hooks.sh
video/: package.json  tsconfig.json
(+1430 files in other folders)
