[package]
name = "profitabledge"
version = "0.1.0"
description = "Profitabledge desktop workstation"
authors = ["Profitabledge"]
edition = "2021"

[lib]
name = "profitabledge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.8.2", features = ["unstable", "tray-icon"] }
tauri-plugin-autostart = "2.4.1"
tauri-plugin-deep-link = "2.4.1"
tauri-plugin-dialog = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.9.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
